# cli

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  flake.nix  package.json  terminal-animation.avif
.github/workflows/: deploy-all.yml  release.yml
docs/deployment/: 01-cli-distribution.md  02-third-party-setup.md  README.md  terminal-animation.avif
docs/design/: landing.html
docs/development/: 01-teleportation-dev-research.md  02-klaas-mvp-spec.md  02-nexo-mvp-spec.md
docs/development/cli/: 01-functional-requirements.md  02-implementation-guide.md  03-startup.md
docs/development/dashboard/: API-ENDPOINTS.md  IMPLEMENTATION.md
docs/documentation/: cli.md  hooks.md
docs/e2ee/: 01-implementation-guide.md
scripts/: install.cmd  install.ps1  install.sh  release-cli.js  setup-cloudflare.sh
src/: agents.rs  analytics.rs  api_client.rs  app.rs  auth.rs  config.rs  credentials.rs  crypto.rs  error.rs  hook.rs  interceptor.rs  lib.rs  main.rs  pty.rs  terminal.rs  types.rs  ui.rs  update.rs  websocket.rs
src/commands/: attach.rs  connect.rs  detach.rs  help.rs  mod.rs  sessions.rs
src/guest/: mod.rs  terminal.rs
