[package]
name = "nexo"
version = "0.1.0"
edition = "2021"
description = "Remote access wrapper for Claude Code"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# PTY handling
portable-pty = "0.8"

# Terminal
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI arguments
clap = { version = "4", features = ["derive"] }

# IDs - ULID (never UUID!)
ulid = "1"

# Encoding
base64 = "0.22"

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"
futures-util = "0.3"

# Randomness for backoff jitter
rand = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Hostname detection
hostname = "0.4"

# Keychain access for credential storage
keyring = "3"

# Directory creation for fallback storage
dirs = "5"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Allow dead code warnings - we have placeholder code for future features
[lints.rust]
dead_code = "allow"
