[package]
name = "klaas"
version = "0.1.5"
edition = "2021"
description = "Remote access wrapper for Claude Code"
license = "UNLICENSED"
repository = "https://github.com/klaas-sh/cli"
homepage = "https://klaas.sh"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# PTY handling
portable-pty = "0.8"

# Terminal
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI arguments
clap = { version = "4", features = ["derive"] }

# IDs - ULID (never UUID!)
ulid = "1"

# Encoding
base64 = "0.22"
hex = "0.4"

# Cryptography (E2EE)
argon2 = "0.5"           # Argon2id password hashing
aes-gcm = "0.10"         # AES-256-GCM encryption
hkdf = "0.12"            # HKDF-SHA256 key derivation
sha2 = "0.10"            # SHA-256 for HKDF
p256 = { version = "0.13", features = ["ecdh"] }  # ECDH P-256 key exchange
zeroize = { version = "1.8", features = ["derive"] }  # Secure memory clearing

# WebSocket client (using rustls for consistent TLS with reqwest)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
url = "2"
futures-util = "0.3"

# Randomness for backoff jitter
rand = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Hostname detection
hostname = "0.4"

# Keychain access for credential storage
keyring = "3"

# Directory creation for fallback storage
dirs = "5"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dotenvy = "0.15.7"

# Temp files for update functionality
tempfile = "3"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"     # Optimize for binary size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization (slower compile)
panic = "abort"     # Smaller binary (no unwinding)
strip = true        # Strip symbols

# Allow dead code warnings - we have placeholder code for future features
[lints.rust]
dead_code = "allow"
